<added for loop to file>

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-<<<<<<< HEAD
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -41,13 +41,11 @@
           <li>Enter your javascript notes here.</li>
         </ul>
       </section>
-=======
-      <!-- Student code goes here -->
->>>>>>> a12bd38ffa91b8bef6088d2e1fb28bed7aea5e45
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
