--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
-<<<<<<< HEAD
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -38,12 +38,11 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your javascript notes here.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
-=======
       <!-- Student code goes here -->
->>>>>>> a12bd38ffa91b8bef6088d2e1fb28bed7aea5e45
     </main>
 
     <footer>
